# live-auralization-demo-LoV

./: .gitignore  check_audio.py  normalize_filters.py  pyproject.toml  requirements.txt
src/: demo_live_auralization.py  live_loop_gui.py  live_loop_player_working.py
